Work towards migration to Java 11
- upgrade Maven plugins
- geotools upgrade to 21 (has Java 11 support)
- add module-info.java
- fix compilation issues caused by moved classes